--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 azure
+azure-core==1.17.0
 azure-ai-textanalytics~=7.1.0
 numpy~=1.21.0
 pandas~=1.3.0
@@ -6,3 +7,5 @@ requests~=2.26.0
 flask
 flask-bootstrap
 flask-wtf
+seaborn==0.11.2
+matplotlib==3.4.3
