--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-azure
-azure-core==1.17.0
-azure-ai-textanalytics~=7.1.0
-numpy~=1.21.0
-pandas~=1.3.0
-requests~=2.26.0
+azure-ai-textanalytics
+numpy
+pandas
+requests
 flask
 flask-bootstrap
 flask-wtf
-seaborn==0.11.2
-matplotlib==3.4.3
+seaborn
+matplotlib
